--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "postinstall": "ng build --prod"
+    },
+    "engines": {
+        "node": "7.8.0",
+        "npm": "4.2.0"
     },
     "private": true,
     "dependencies": {
+        "@angular/cli": "1.4.9",
+        "@angular/compiler-cli": "^4.2.4",
         "@angular/animations": "^4.2.4",
         "@angular/common": "^4.2.4",
         "@angular/compiler": "^4.2.4",
@@ -21,6 +28,7 @@
         "@angular/platform-browser": "^4.2.4",
         "@angular/platform-browser-dynamic": "^4.2.4",
         "@angular/router": "^4.2.4",
+        "typescript": "~2.3.3",
         "core-js": "^2.4.1",
         "rxjs": "^5.4.2",
         "zone.js": "^0.8.14",
@@ -41,8 +49,6 @@
         "request": "^2.81.0"
     },
     "devDependencies": {
-        "@angular/cli": "1.4.9",
-        "@angular/compiler-cli": "^4.2.4",
         "@angular/language-service": "^4.2.4",
         "@types/jasmine": "~2.5.53",
         "@types/jasminewd2": "~2.0.2",
@@ -58,7 +64,6 @@
         "karma-jasmine-html-reporter": "^0.2.2",
         "protractor": "~5.1.2",
         "ts-node": "~3.2.0",
-        "tslint": "~5.7.0",
-        "typescript": "~2.3.3"
+        "tslint": "~5.7.0"
     }
 }
